[package]
name = "dyndns53"
version = "1.0.0"
authors = ["Christoph Grotz <christophgrotz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.44.0"
rusoto_route53 = "0.44.0"
hyper = "0.13"
tokio = { version = "0.2", features = ["time", "rt-core", "fs"] }
